--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ main {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* Styling for the Caution Sign Image */
-#caution-sign {
+/* Styling for the Caution symbol Image */
+#caution-symbol {
     width: 100px;  /* Adjust the size of the image */
     height: auto;
     margin-top: 20px;
