--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* General Body Style */
+/* General Body Styles */
 body {
     font-family: 'Fira Code', monospace;
     font-weight: 400; /* Regular weight */
@@ -22,7 +22,7 @@ h1 {
 }
 
 h2 {
-font-family: 'Fira Code', monospace;
+    font-family: 'Fira Code', monospace;
     font-weight: 600; /* Semi-bold weight */
     margin: 0;
 }
@@ -49,15 +49,13 @@ main {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* Styling for the Caution symbol Image */
 #caution-symbol {
-    width: 50px;  /* Adjust the size of the image */
+    width: 50px;
     height: auto;
     margin-top: 20px;
     animation: bounce 1s infinite alternate; /* Optional: add a fun animation */
 }
 
-/* Optional animation for the caution sign */
 @keyframes bounce {
     0% { transform: translateY(0); }
     100% { transform: translateY(-10px); }
@@ -71,6 +69,7 @@ main {
     font-style: normal;
 }
 
+/* Footer Styles */
 footer {
     background-color: #2c3e50;
     color: white;
